k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ums-service
spec:
  type: ClusterIP
  selector:
    app: ums
  ports:
    - port: 80
      targetPort: 8000
